--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "debug": "^4.3.7",
     "cors": "^2.8.5",
+    "debug": "^4.3.7",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "fuse.js": "^6.6.2",
@@ -24,6 +24,7 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
+    "openai": "^5.20.0",
     "pdfjs-dist": "^5.4.149",
     "saslprep": "^1.0.3"
   },
